# i24

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build_docs.py  changelog.md  pyproject.toml
.github/workflows/: docs.yml
docs/source/: conf.py  index.rst
docs/source/about/: contributing.rst  license.rst
docs/source/api/: i24_class.rst  u24_class.rst
docs/source/user_guide/: arithmetic.rst  basic_usage.rst  byte_operations.rst  installation.rst
examples/: parse_chunks.rs  wire_struct_bytemuck.rs  wire_struct_zerocopy.rs
i24_benches/: Cargo.toml  analysis.py  old)i24_benchmark_results.json
i24_benches/benchmark_analysis/: benchmark_report.md
i24_benches/src/: main.rs
python/: README.md
python/examples/: docs_snippets.ipynb
python/i24/: __init__.py  __init__.pyi
src/: lib.rs  repr.rs
src/types/: i24.rs  mod.rs  u24.rs
