[package]
name = "i24"
version = "2.1.0"
edition = "2021"
license = "MIT"
description = "A Rust library for working with 24-bit integers."
readme = "README.md"
repository = "https://github.com/jmg049/i24"
documentation = "https://docs.rs/i24"
categories = ["data-structures", "mathematics", "encoding"]

[dependencies]
bytemuck = "1"
num-traits = { version = "0.2", default-features = false }

serde = { version = "1", default-features = false, optional = true }
pyo3 = { version = "0.24.2", features = ["extension-module"], optional = true }
numpy = { version = "0.24.0", optional = true }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }

[features]
alloc = []
libm = ["num-traits/libm"]
std = ["num-traits/std"]
pyo3 = ["std", "dep:pyo3", "dep:numpy"]
serde = ["dep:serde"]
