[package]
name = "i24"
version = "2.3.3"
edition = "2024"
license = "MIT"
description = "A Rust library for working with 24-bit integers."
readme = "README.md"
repository = "https://github.com/jmg049/i24"
documentation = "https://docs.rs/i24"
categories = ["data-structures", "mathematics", "encoding"]
exclude = ["examples/", "docs", "python/", "i24_benches/",    
    "pyproject.toml",
    "uv.lock",
    "build_docs.py",
]

[dependencies]
bytemuck = { version = "1", features = ["derive"] }
num-traits = { version = "0.2", default-features = false }

serde = { version = "1", default-features = false, optional = true }
pyo3 = { version = "0.28.0", features = ["extension-module", "experimental-inspect"], optional = true }
numpy = { version = "0.28.0", optional = true }
zerocopy = { version = "0.8", default-features = false, features = [
    "derive",
], optional = true }
ndarray = { version = "0.17.1", optional = true }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
proptest = "1.0"

[features]
alloc = []
std = ["num-traits/std"]
pyo3 = ["std", "dep:pyo3", "dep:numpy"]
serde = ["dep:serde"]
zerocopy = ["dep:zerocopy"]
ndarray = ["dep:ndarray"]
num-cast = []
