[project]
name = "i24"
version = "2.2.0"
description = "Python bindings for working with 24-bit integers."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Jack Geraghty", email = "jgeraghty049@gmail.com" },
    { name = "Vrtgs" },
]
keywords = ["24-bit", "integer", "audio", "data-structures"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.urls]
Homepage = "https://github.com/jmg049/i24"
repository = "https://github.com/jmg049/i24"
documentation = "https://docs.rs/i24"
changelog = "https://github.com/jmg049/i24/blob/main/CHANGELOG.md"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
