[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "i24_type"
version = "2.3.1"
description = "Python bindings for working with 24-bit integers."
readme = "python/README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Jack Geraghty", email = "jgeraghty049@gmail.com" },
    { name = "Vrtgs" },
]
keywords = ["24-bit", "integer", "audio", "data-structures"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.26"
]

[project.urls]
homepage = "https://github.com/jmg049/i24"
repository = "https://github.com/jmg049/i24"
documentation = "https://jmg049.github.io/i24/"
changelog = "https://github.com/jmg049/i24/blob/main/CHANGELOG.md"
pypi = "https://pypi.org/project/i24/"
issues = "https://github.com/jmg049/i24/issues"

[tool.maturin]
features = ["pyo3"]
module-name = "i24"
python-source = "python"
include = ["**/*.pyi", "**/py.typed"]
exclude = ["**/examples/*", "**/tests/*", "**/*.rs"]

[dependency-groups]
dev = [
    "myst-parser>=3.0.1",
    "sphinx>=4.0",
    "sphinx-copybutton>=0.5.2",
    "sphinx-rtd-theme>=3.1.0",
]