[package]
name = "i24_benches"
version = "0.1.0"
edition = "2024"

[dependencies]
i24 = {path = "../"}
chrono = "0.4.41"
rand = "0.9.1"
rustc_version_runtime = "0.3.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sys-info = "0.9.1"



[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"
strip = true